# FEUP-AEDA

./: README.md  presentation.pptx
doc/html/: annotated.html  classApartamento-members.html  classApartamento.html  classCondominio-members.html  classCondominio.html  classCondomino-members.html  classCondomino.html  classErrorReadingFile-members.html  classErrorReadingFile.html  classErrorSettingValue-members.html  classErrorSettingValue.html  classErrorWritingFile-members.html  classErrorWritingFile.html  classFuncionario-members.html  classFuncionario.html  classGestao-members.html  classGestao.html  classHabitacao-members.html  classHabitacao.html  classServico-members.html  classServico.html  classVivenda-members.html  classVivenda.html  classes.html  condominio_8h_source.html  dir_4d58c6c323e33b8825f4309d8307483e.html  dir_5916fd45bc1cb54d8bb41328f8ad3d72.html  dir_ed353eea8d78a173a119b387b77c750d.html  exceptions_8h_source.html  files.html  functions.html  functions_8h_source.html  (+12 more)
src/: CMakeLists.txt  README.txt  condominio.cpp  condominio.h  condominio.txt  condominos.txt  condominos1.txt  condominos2.txt  exceptions.h  funcionarios.txt  functions.cpp  functions.h  functionsmenus.cpp  functionsmenus.h  habitacoes.cpp  habitacoes.h  habitacoes.txt  habitacoes1.txt  habitacoes2.txt  historico.txt  historico1.txt  historico2.txt  historicoCondominos.txt  historicoCondominos1.txt  historicoCondominos2.txt  main.cpp  menus.cpp  menus.h  servicos.cpp  servicos.h  servicos.txt  transportes.cpp  transportes.h  transportes.txt  transportes1.txt  transportes2.txt
(+70 files in other folders)
